--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
@@ -62,10 +62,10 @@
                     <mat-header-cell *matHeaderCellDef>Shipping Address</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <!-- {{element['customerDetails.customeraddress.address'] ? element['customerDetails.customeraddress.address'] : '-'}} -->
-                        {{element['customerDetails.customeraddress.landMark']}}
-                        {{element['customerDetails.customeraddress.address']}}
-                        {{element['customerDetails.customeraddress.city.name']}}
-                        {{element['customerDetails.customeraddress.state.name']}}
+                        {{element['customerOrderAddress.shippingLandMark']}}
+                        {{element['customerOrderAddress.shippingAddress']}}
+                        {{element['customerOrderAddress.shippingCity.name']}}
+                        {{element['customerOrderAddress.shippingState.name']}}
                         {{element['customerDetails.customeraddress.postalCode']}}
                     </mat-cell>
                 </ng-container>
