--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -34,6 +34,7 @@
                         </div>
                     </mat-cell>
                 </ng-container>
+
                 <ng-container matColumnDef="amount">
                     <mat-header-cell *matHeaderCellDef>Loan Amount</mat-header-cell>
                     <mat-cell *matCellDef="let loan" class="d-block">
@@ -60,7 +61,8 @@
 
                 <ng-container matColumnDef="tenure">
                     <mat-header-cell *matHeaderCellDef>Loan Tenure</mat-header-cell>
-                    <mat-cell *matCellDef="let loan">{{loan?.tenure}} Months</mat-cell>
+                    <mat-cell *matCellDef="let loan">{{loan?.tenure}} Months
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="interestRestDays">
@@ -96,6 +98,11 @@
                             *ngxPermissionsOnly="['loanApplicationAdd']">Add New Loan</button>
                     </mat-cell>
                 </ng-container> -->
+
+                <ng-container matColumnDef="packets">
+                    <mat-header-cell *matHeaderCellDef>Packets ID</mat-header-cell>
+                    <mat-cell *matCellDef="let loan">{{loan?.loanPacketDetails[0].packets[0].packetUniqueId}}</mat-cell>
+                </ng-container>
 
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
