--- a/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/loan-scrap-details/loan-scrap-details.component.html
@@ -2,9 +2,16 @@
     <div class="row">
         <div class="col-12 card kt-padding-15">
             <div class="row justify-content-around kt-padding-b-15">
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Loan ID</div>
-                    <div class=" text-color font-weight-500 kt-padding-b-5">{{details?.customerLoan[0]?.loanUniqueId}}
+                    <div class=" text-color font-weight-500 kt-padding-b-5 d-block">
+                        <div>
+                            {{details?.customerLoan[0]?.loanUniqueId}}
+                        </div>
+                        <div>
+                            {{details?.customerLoan[1]?.loanUniqueId}}
+                        </div>
+
                     </div>
                 </div>
                 <div class="col" *ngIf="scrapId">
@@ -17,9 +24,15 @@
                     <div class=" text-color font-weight-500 kt-padding-b-5">
                         {{details?.customer?.customerUniqueId}}</div>
                 </div>
-                <div class="col-2" *ngIf="loanId">
+                <div class="col-2" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Loan Amount</div>
-                    <div class=" text-color font-weight-500 kt-padding-b-5">{{details?.customerLoan[0]?.loanAmount}}
+                    <div class=" text-color font-weight-500 kt-padding-b-5 d-block">
+                        <div>
+                            {{details?.customerLoan[0]?.loanAmount}}
+                        </div>
+                        <div>
+                            {{details?.customerLoan[1]?.loanAmount}}
+                        </div>
                     </div>
                 </div>
                 <div class="col" *ngIf="scrapId">
@@ -27,12 +40,12 @@
                     <div class=" text-color font-weight-500 kt-padding-b-5">{{details?.finalScrapAmountAfterMelting}}
                     </div>
                 </div>
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Loan Tenure</div>
                     <div class=" text-color font-weight-500 kt-padding-b-5">{{details?.tenure}} Months
                     </div>
                 </div>
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Start Date</div>
                     <div class=" text-color font-weight-500 kt-padding-b-5">
                         {{details?.loanStartDate | date: 'mediumDate'}}</div>
@@ -42,12 +55,12 @@
                     <div class=" text-color font-weight-500 kt-padding-b-5">
                         {{details?.scrapPersonalDetail?.startDate | date: 'mediumDate'}}</div>
                 </div>
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">End Date</div>
                     <div class=" text-color font-weight-500 kt-padding-b-5">
                         {{details?.loanEndDate | date: 'mediumDate'}}</div>
                 </div>
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Status</div>
                     <div class=" text-color font-weight-500 kt-padding-b-5">
                         {{details?.loanStage?.name | titlecase}}
@@ -61,10 +74,18 @@
                 </div>
             </div>
             <div class="row justify-content-around">
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Interest Rate</div>
-                    <div class=" text-color font-weight-500 kt-padding-b-5">{{details?.customerLoan[0]?.interestRate}}%
-                        P.M
+                    <div class=" text-color font-weight-500 kt-padding-b-5 d-block">
+                        <div>
+                            {{details?.customerLoan[0]?.interestRate}}%
+                            P.M
+                        </div>
+                        <div>
+                            {{details?.customerLoan[1]?.interestRate}}%
+                            P.M
+                        </div>
+
                     </div>
                 </div>
                 <div class="col">
@@ -74,7 +95,7 @@
                         {{details?.customer?.lastName | titlecase}}
                     </div>
                 </div>
-                <div class="col-2" *ngIf="loanId">
+                <div class="col-2" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">Account Number</div>
                     <div class=" text-color font-weight-500 kt-padding-b-5">
                         {{details?.loanBankDetail?.accountNumber}}
@@ -85,7 +106,7 @@
                     <div class=" text-color font-weight-500 kt-padding-b-5">{{details?.scrapBankDetails?.acNumber}}
                     </div>
                 </div>
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-padding-b-5">IFSC Code</div>
                     <div class=" text-color font-weight-500 kt-padding-b-5">
                         {{details?.loanBankDetail?.ifscCode | uppercase}}</div>
@@ -95,18 +116,18 @@
                     <div class=" text-color font-weight-500 kt-padding-b-5">
                         {{details?.scrapBankDetails?.ifscCode | uppercase}}</div>
                 </div>
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-margin-b-5">Nominee</div>
                     <div class="text-color font-weight-500">
                         {{details?.loanNomineeDetail[0].nomineeName | titlecase}}
                     </div>
                 </div>
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-margin-b-5">Age</div>
                     <div class="text-color font-weight-500">{{details?.loanNomineeDetail[0].nomineeAge}}
                     </div>
                 </div>
-                <div class="col" *ngIf="loanId">
+                <div class="col" *ngIf="masterLoanId">
                     <div class="text-gray font-weight-500 kt-margin-b-5">Relation</div>
                     <div class="text-color font-weight-500">
                         {{details?.loanNomineeDetail[0].relationship | titlecase}}</div>
@@ -119,7 +140,7 @@
 
     <div class="row kt-margin-t-15">
         <!-- loan ornaments -->
-        <div class="col-12 card kt-padding-15" *ngIf="loanId">
+        <div class="col-12 card kt-padding-15" *ngIf="masterLoanId">
             <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Ornaments - Total
                 {{details?.loanOrnamentsDetail?.length}} Ornaments</label>
             <mat-tab-group style="min-height: 300px;">
@@ -266,7 +287,7 @@
 
     <div class="row kt-margin-t-15">
         <!-- loan packets -->
-        <div class="col-12 card kt-padding-15" *ngIf="loanId">
+        <div class="col-12 card kt-padding-15" *ngIf="masterLoanId">
             <label class="font-weight-bold text-color kt-margin-b-25 kt-margin-t-25">Packets ID - Total
                 {{details?.loanPacketDetails[0].packets.length}} Packets</label>
             <div style="min-height: 300px;" *ngFor="let packets of details?.loanPacketDetails;index as idx">
@@ -375,7 +396,7 @@
 
             </div>
             <!-- loan documents -->
-            <div class="row" *ngIf="loanId">
+            <div class="row" *ngIf="masterLoanId">
                 <div class="col-4">
                     <div class="pdf">
                         <iframe [src]="details.customerLoanDocument.loanAgreementCopyImage | safe : 'resourceUrl'"
