--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -88,7 +88,7 @@
                             <div [ngClass]="data.action == 'add' ? 'col-5' : 'col-8'">
                                 <!-- <mat-form-field appearance="outline" class="w-100"> -->
                                 <input class="form-control" type="text" formControlName="mobileNumber" numbersOnly
-                                    autocomplete="off" placeholder="Enter mobile number" margin
+                                    autocomplete="off" placeholder="Enter mobile number" maxlength="10"
                                     [class.isError]="controls.mobileNumber.touched && controls.mobileNumber.invalid">
                                 <mat-error
                                     *ngIf="controls.mobileNumber.errors?.required && controls.mobileNumber.touched">
