--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
@@ -564,7 +564,7 @@
                             </div>
 
                         </div>
-                        <div class="row">
+                        <div class="row" [class.kt-margin-b-15]="data.modal">
 
 
                             <!-- <div class="col-6">
