--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-approval/full-release-approval/full-release-approval.component.html
@@ -127,18 +127,18 @@
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let item">
                         <ng-container *ngIf="item.amountStatus != 'completed'">
-                            <button *ngxPermissionsOnly="['partReleaseEdit']" style="width: 120px;" class="apply-kyc"
+                            <button *ngxPermissionsOnly="['fullReleaseEdit']" style="width: 120px;" class="apply-kyc"
                                 (click)="updateStatus(item)">Update
                             </button>
                         </ng-container>
                         <ng-container *ngIf="item.amountStatus == 'completed'">
                             <div *ngIf="!item.isReleaserAssigned" [ngStyle]="{'display': 'inherit'}">
-                                <button *ngxPermissionsOnly="['partReleaseAssignAppraiser']" style="width: 120px;"
+                                <button *ngxPermissionsOnly="['fullReleaseAssignReleaser']" style="width: 120px;"
                                     class="apply-kyc" (click)="assign(item)">Assign
                                     Releaser</button>
                             </div>
                             <div *ngIf="item.isReleaserAssigned" [ngStyle]="{'display': 'inherit'}">
-                                <button *ngxPermissionsOnly="['partReleaseAssignAppraiser']" style="width: 120px;"
+                                <button *ngxPermissionsOnly="['fullReleaseAssignReleaser']" style="width: 120px;"
                                     class="apply-kyc" (click)="updateAppraiser(item)">Update
                                     Releaser
                                 </button>
