--- a/gold-admin-frontend/src/app/views/partials/components/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/approval/approval.component.html
@@ -114,7 +114,7 @@
                                     [class.isError]="controls.scrapStatusForBM.invalid && controls.scrapStatusForBM.touched">
                                     <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
                                     <option [value]="status.value" [disabled]="checkforApprovalBM(status)"
-                                        *ngFor="let status of branchManager">
+                                        *ngFor="let status of branchManagerScrap">
                                         {{status.name | titlecase}}</option>
                                 </select>
 
@@ -129,7 +129,7 @@
                                     [class.isError]="controls.loanStatusForBM.invalid && controls.loanStatusForBM.touched">
                                     <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
                                     <option [value]="status.value" [disabled]="checkforApprovalBM(status)"
-                                        *ngFor="let status of branchManager">
+                                        *ngFor="let status of branchManagerLoan">
                                         {{status.name | titlecase}}</option>
                                 </select>
 
@@ -143,7 +143,7 @@
                                     [class.isError]="controls.scrapStatusForOperatinalTeam.invalid && controls.scrapStatusForOperatinalTeam.touched">
                                     <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
                                     <option [value]="status.value" [disabled]="checkforApprovalOT(status)"
-                                        *ngFor="let status of branchManager">
+                                        *ngFor="let status of branchManagerScrap">
                                         {{status.name | titlecase}}</option>
                                 </select>
                                 <mat-error
@@ -157,7 +157,7 @@
                                     [class.isError]="controls.loanStatusForOperatinalTeam.invalid && controls.loanStatusForOperatinalTeam.touched">
                                     <option value="pending" [disabled]="true" [selected]="true">Select Status</option>
                                     <option [value]="status.value" [disabled]="checkforApprovalOT(status)"
-                                        *ngFor="let status of branchManager">
+                                        *ngFor="let status of branchManagerLoan">
                                         {{status.name | titlecase}}</option>
                                 </select>
                                 <mat-error
