--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.scss
@@ -6,7 +6,14 @@
 		background: #fff;
 		min-height: 420px;
 	}
+	.one {
+		
 	
+		float: left;
+  
+    
+	
+	}
 	.height220 {
 		height: 270px;
 	}
