--- a/gold-admin-frontend/src/app/views/partials/layout/topbar/user-profile/user-profile.component.html
+++ b/gold-admin-frontend/src/app/views/partials/layout/topbar/user-profile/user-profile.component.html
@@ -1,34 +1,47 @@
-<!-- <div ngbDropdown placement="bottom-right" *ngIf="user$ | async as _user" class="kt-header__topbar-item kt-header__topbar-item--user">
+<div ngbDropdown #userDropdown="ngbDropdown" placement="bottom-right" *ngIf="user$ | async as _user"
+	class="kt-header__topbar-item kt-header__topbar-item--user">
 	<div ngbDropdownToggle class="kt-header__topbar-wrapper">
 		<div class="kt-header__topbar-user" [ngClass]="{'kt-header__topbar-icon': icon}">
-			<span class="kt-header__topbar-welcome kt-hidden-mobile" *ngIf="greeting">Hi,</span>
-			<span class="kt-header__topbar-username kt-hidden-mobile" *ngIf="greeting">{{_user.fullname}}</span>
+			<!-- <span class="kt-header__topbar-welcome kt-hidden-mobile" *ngIf="greeting">Hi,</span> -->
+			<span class="kt-header__topbar-username kt-hidden-mobile"
+				*ngIf="greeting">{{(_user?.firstName + ' ' + _user?.lastName ) | titlecase}}</span>
 			<i *ngIf="icon" class="flaticon2-user-outline-symbol"></i>
-			<img *ngIf="avatar" alt="Pic" [attr.src]="_user.pic">
-			<span *ngIf="badge" class="kt-badge kt-badge--username kt-badge--unified-success kt-badge--lg kt-badge--rounded kt-badge--bold">{{_user.fullname|firstLetter}}</span>
+			<!-- <img *ngIf="(_user?.userDetail?.data?.UserImage != 'NA')" alt="Pic"
+				[attr.src]="_user?.userDetail?.data?.UserImage"> -->
+			<img alt="Pic" src="assets/media/icons/user.svg">
+			<span *ngIf="badge"
+				class="kt-badge kt-badge--username kt-badge--unified-success kt-badge--lg kt-badge--rounded kt-badge--bold">{{_user?.fullname|firstLetter}}</span>
 		</div>
 	</div>
-	<div ngbDropdownMenu class="dropdown-menu dropdown-menu-fit dropdown-menu-right dropdown-menu-anim dropdown-menu-top-unround dropdown-menu-xl">
+	<div ngbDropdownMenu
+		class="dropdown-menu dropdown-menu-fit dropdown-menu-right dropdown-menu-anim dropdown-menu-top-unround dropdown-menu-xl">
 		<!--begin: Head -->
-		<!-- <div class="kt-user-card kt-user-card--skin-dark kt-notification-item-padding-x" style="background-image: url(./assets/media/misc/bg-1.jpg)">
+		<div class="kt-user-card kt-user-card--skin-dark kt-notification-item-padding-x">
 			<div class="kt-user-card__avatar">
-				<img alt="Pic" [attr.src]="_user.pic"/>
+				<!-- <img *ngIf="(_user?.userDetail?.data?.UserImage != 'NA')" alt="Pic"
+					[attr.src]="_user?.userDetail?.data?.UserImage" /> -->
+				<img alt="Pic" src="assets/media/icons/user.svg">
 				<span [hidden]="true" class="kt-badge kt-badge--lg kt-badge--rounded kt-badge--bold kt-font-success">
-					{{_user.fullname|firstLetter}}
+					{{(_user?.firstName + ' ' + _user?.lastName ) | firstLetter}}
 				</span>
 			</div>
-			<div class="kt-user-card__name">
-				{{_user.fullname}}
+			<div class="pl-2">
+				<div class="kt-user-card__name">
+					{{(_user?.firstName + ' ' + _user?.lastName ) | titlecase}}
+				</div>
+				<div class="kt-user-card__name">
+					Role: {{_user?.roleName[0]| titlecase}}
+				</div>
 			</div>
-			<div class="kt-user-card__badge">
-				<span class="btn btn-success btn-sm btn-bold btn-font-md">23 messages</span>
-			</div>
-		</div> -->
+			<!-- <div class="kt-user-card__badge kt-pointer" (click)="userDropdown.close();">
+					<span class="btn btn-success btn-sm btn-bold btn-font-md">23 messages</span>
+				</div> -->
+		</div>
 		<!--end: Head -->
 
 		<!--begin: Navigation -->
-		<!-- <div class="kt-notification">
-			<a ngbDropdownItem routerLink="profile" href="javascript:;" class="kt-notification__item">
+		<div class="kt-notification">
+			<!-- <a class="kt-notification__item kt-pointer" (click)="redirect(); userDropdown.close();">
 				<div class="kt-notification__item-icon">
 					<i class="flaticon2-calendar-3 kt-font-success"></i>
 				</div>
@@ -40,34 +53,34 @@
 						Account settings and more
 					</div>
 				</div>
-			</a>
-			<a ngbDropdownItem routerLink="profile" href="javascript:;" class="kt-notification__item">
-				<div class="kt-notification__item-icon">
-					<i class="flaticon2-mail kt-font-warning"></i>
-				</div>
-				<div class="kt-notification__item-details">
-					<div class="kt-notification__item-title kt-font-bold">
-						My Messages
+			</a> -->
+			<!-- <a (click)="userDropdown.close();" class="kt-notification__item kt-pointer">
+					<div class="kt-notification__item-icon">
+						<i class="flaticon2-mail kt-font-warning"></i>
 					</div>
-					<div class="kt-notification__item-time">
-						Inbox and tasks
+					<div class="kt-notification__item-details">
+						<div class="kt-notification__item-title kt-font-bold">
+							My Messages
+						</div>
+						<div class="kt-notification__item-time">
+							Inbox and tasks
+						</div>
 					</div>
-				</div>
-			</a>
-			<a ngbDropdownItem routerLink="profile" href="javascript:;" class="kt-notification__item">
-				<div class="kt-notification__item-icon">
-					<i class="flaticon2-rocket-1 kt-font-danger"></i>
-				</div>
-				<div class="kt-notification__item-details">
-					<div class="kt-notification__item-title kt-font-bold">
-						My Activities
+				</a>
+				<a (click)="userDropdown.close();" class="kt-notification__item kt-pointer">
+					<div class="kt-notification__item-icon">
+						<i class="flaticon2-rocket-1 kt-font-danger"></i>
 					</div>
-					<div class="kt-notification__item-time">
-						Logs and notifications
+					<div class="kt-notification__item-details">
+						<div class="kt-notification__item-title kt-font-bold">
+							My Activities
+						</div>
+						<div class="kt-notification__item-time">
+							Logs and notifications
+						</div>
 					</div>
-				</div>
-			</a>
-			<a ngbDropdownItem routerLink="profile" href="javascript:;" class="kt-notification__item">
+				</a> -->
+			<!-- <a class="kt-notification__item kt-pointer" (click)="redirectToMyTask(); userDropdown.close();">
 				<div class="kt-notification__item-icon">
 					<i class="flaticon2-hourglass kt-font-brand"></i>
 				</div>
@@ -76,38 +89,40 @@
 						My Tasks
 					</div>
 					<div class="kt-notification__item-time">
-						latest tasks and projects
+						Latest tasks and projects
 					</div>
 				</div>
-			</a>
+			</a> -->
 			<div class="kt-notification__custom">
-				<a href="javascript:;" (click)="logout()" class="btn btn-outline-brand btn-upper btn-sm btn-bold">Sign Out</a>
+				<!-- <a href="javascript:;" (click)="logout()" class="btn btn-outline-brand btn-upper btn-sm btn-bold">Sign
+					Out</a> -->
+				<kt-button [type]="'button'" [value]="'Sign Out'" (click)="logout()"></kt-button>
 			</div>
-		</div> -->
+		</div>
 		<!--end: Navigation -->
 
 		<!--begin: Navigation(alternative) -->
-		<!-- <ul class="kt-nav kt-margin-b-10 kt-hidden">
+		<ul class="kt-nav kt-margin-b-10 kt-hidden">
 			<li class="kt-nav__item">
-				<a ngbDropdownItem routerLink="profile" class="kt-nav__link">
+				<a routerLink="profile" class="kt-nav__link">
 					<span class="kt-nav__link-icon"><i class="flaticon2-calendar-3"></i></span>
 					<span class="kt-nav__link-text">My Profile</span>
 				</a>
 			</li>
 			<li class="kt-nav__item">
-				<a ngbDropdownItem routerLink="profile" class="kt-nav__link">
+				<a routerLink="profile" class="kt-nav__link">
 					<span class="kt-nav__link-icon"><i class="flaticon2-browser-2"></i></span>
 					<span class="kt-nav__link-text">My Tasks</span>
 				</a>
 			</li>
 			<li class="kt-nav__item">
-				<a ngbDropdownItem routerLink="profile" class="kt-nav__link">
+				<a routerLink="profile" class="kt-nav__link">
 					<span class="kt-nav__link-icon"><i class="flaticon2-mail"></i></span>
 					<span class="kt-nav__link-text">Messages</span>
 				</a>
 			</li>
 			<li class="kt-nav__item">
-				<a ngbDropdownItem routerLink="profile" class="kt-nav__link">
+				<a routerLink="profile" class="kt-nav__link">
 					<span class="kt-nav__link-icon"><i class="flaticon2-gear"></i></span>
 					<span class="kt-nav__link-text">Settings</span>
 				</a>
@@ -115,7 +130,7 @@
 			<li class="kt-nav__item kt-nav__item--custom kt-margin-t-15">
 				<a (click)="logout()" class="btn btn-outline-brand btn-upper btn-sm btn-bold">Sign Out</a>
 			</li>
-		</ul> -->
+		</ul>
 		<!--end: Navigation(alternative) -->
-	<!-- </div>
-</div> --> -->
+	</div>
+</div>
