--- a/gold-admin-frontend/src/assets/sass/global/components/general/_user-card.scss
+++ b/gold-admin-frontend/src/assets/sass/global/components/general/_user-card.scss
@@ -10,7 +10,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     padding: 2rem 1rem;
-    background-color: #f9fafe;
+    // background-color: #f9fafe;
+    background-color: #454D67;
 
     // Elements
     .kt-user-card__avatar {
