--- a/gold-admin-frontend/src/assets/sass/global/layout/header/_topbar.scss
+++ b/gold-admin-frontend/src/assets/sass/global/layout/header/_topbar.scss
@@ -65,7 +65,8 @@ $kt-header-topbar-user-avatar-size-mobile: 30px;
 		// User profile
 		&.kt-header__topbar-item--user {
 			.kt-header__topbar-user {
-				padding: 0 8px;
+				// padding: 0 8px;
+				padding: 0 25px;
 				display: flex;
 				align-items: center;
 				align-self: center;
