--- a/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/global-settings/global-settings.component.html
@@ -143,10 +143,13 @@
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">Before Standard Deduction
                     </div>
                     <div class="col-6 per-gram align-items-center">
-                        <input type="text" class="form-control" formControlName="beforeStandardDeduction" placeholder="8"
+                        <input type="text" class="form-control" formControlName="beforeStandardDeduction" placeholder="0"
                             [class.isError]="controls.beforeStandardDeduction.invalid && controls.beforeStandardDeduction.touched">
                         <mat-error *ngIf="controls.beforeStandardDeduction.invalid && controls.beforeStandardDeduction.touched">
                             Field required</mat-error>
+                        <mat-error *ngIf="controls.beforeStandardDeduction.errors?.maxlength">
+                                 Invalid Number
+                    </mat-error>
                     </div>
                 </div>
             </div>
@@ -158,10 +161,13 @@
                     <div class="col-6 form-label text-color d-flex align-items-center mandatory">After Standard Deduction
                     </div>
                     <div class="col-6 per-gram align-items-center">
-                        <input type="text" class="form-control" formControlName="afterStandardDeduction" placeholder="8"
+                        <input type="text" class="form-control" formControlName="afterStandardDeduction" placeholder="99"
                             [class.isError]="controls.afterStandardDeduction.invalid && controls.afterStandardDeduction.touched">
                         <mat-error *ngIf="controls.afterStandardDeduction.invalid && controls.afterStandardDeduction.touched">
                             Field required</mat-error>
+                            <mat-error *ngIf="controls.afterStandardDeduction.errors?.maxlength">
+                                Invalid Number
+                     </mat-error>
                     </div>
                 </div>
             </div>
