--- a/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
@@ -65,18 +65,21 @@
                 <mat-error *ngIf="controls.processingCharges.touched && controls.processingCharges.invalid">
                     Field Required</mat-error>
             </div>
+            <div class="col">
             <div class="col" *ngIf="showScrapAcknowledgementFlag">
-                <select class="form-control" formControlName="standardDeduction"
-                    [class.isError]="controls.standardDeduction.touched && controls.standardDeduction.invalid">
-                    <option value="" [disabled]="true" [selected]="controls.standardDeduction.value == '' ||
-                            controls.standardDeduction.value == null">Select Standard Deduction</option>
-                    <option [value]="sd.standardDeduction" *ngFor="let sd of standardDeductionArr">
-                        {{sd.standardDeduction}}
-                    </option>
-                </select>
-                <mat-error *ngIf="controls.standardDeduction.touched && controls.standardDeduction.invalid">
-                    <span *ngIf="controls.standardDeduction.errors?.required">Field Required</span>
-                </mat-error>
+                <input type="text" formControlName="standardDeduction" class="form-control "
+                [class.isError]="controls.standardDeduction.touched && controls.standardDeduction.invalid"
+                placeholder="standardDeduction" readonly>
+            <mat-error *ngIf="controls.standardDeduction.touched && controls.standardDeduction.invalid">
+                Field Required</mat-error>
+            </div>
+            <div class="col form-label" *ngIf="showScrapAcknowledgementFlag">
+                <label>Before Standard Deduction - <span class="currency">
+                    {{totalAmount | indianCurrencyFormat}}</span></label>
+            </div>
+            <div class="col form-label" *ngIf="showScrapAcknowledgementFlag">
+                <label>After Standard Deduction -</label>
+            </div>
             </div>
             <div class="col" *ngIf="showScrapAcknowledgementFlag">
                 <select class="form-control" formControlName="customerConfirmationStatus"
